[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/card.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Cards/eagle.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Cards/BG.png" type="Texture" id=3]
[ext_resource path="res://resourse/Fonts/N_cards.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=2]
size = 13
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "back_scale_mini"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "compra_mini_scale"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "scale_mini"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}

[node name="card" type="TextureRect"]
margin_right = 90.0
margin_bottom = 150.0
rect_scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="bg" type="TextureRect" parent="."]
modulate = Color( 0, 0.623529, 1, 1 )
margin_right = 90.0
margin_bottom = 150.0
rect_min_size = Vector2( 80, 150 )
texture = ExtResource( 3 )
expand = true

[node name="icon" type="TextureRect" parent="."]
margin_left = 5.0
margin_top = 20.0
margin_right = 85.0
margin_bottom = 145.0
texture = ExtResource( 2 )
expand = true

[node name="bg_name" type="Sprite" parent="."]
position = Vector2( 5, 2 )
scale = Vector2( 0.851064, 0.0445026 )
texture = ExtResource( 3 )
centered = false
hframes = 3
frame = 1

[node name="name" type="Label" parent="."]
margin_left = 5.0
margin_top = 3.0
margin_right = 85.0
margin_bottom = 20.0
rect_clip_content = true
custom_fonts/font = SubResource( 2 )
text = "Lion"
align = 1
valign = 1
uppercase = true

[node name="back_icon" type="TextureRect" parent="."]
margin_right = 90.0
margin_bottom = 150.0
rect_min_size = Vector2( 80, 150 )
expand = true

[node name="anim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/back_scale_mini = SubResource( 8 )
anims/compra_mini_scale = SubResource( 9 )
anims/scale_mini = SubResource( 6 )

[connection signal="gui_input" from="." to="." method="_on_card_gui_input"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
